// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<MinimalModal /> > should match snapshot with body 1`] = `
<body
  class="theme_OD_Base__j49br80"
  style="overflow: hidden;"
>
  <div>
    <div
      class="theme_OD_Base__j49br80"
      data-od-component-provider=""
    />
  </div>
  <div
    class="theme_OD_Base__j49br80"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="true"
        class="reset_block__1oah0224 sprinkles_position_fixed_mobile__onxwjua3 sprinkles_backgroundColor_neutral__onxwju3v Modal_backdrop_root__1psykzh3 Modal_transition__1psykzh1"
      />
      <div
        class="reset_block__1oah0224 sprinkles_position_fixed_mobile__onxwjua3 sprinkles_overflow_hidden_mobile__onxwju8v Modal_root__1psykzh0 Modal_transition__1psykzh1"
        role="presentation"
      >
        <div
          aria-hidden="false"
          class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubn sprinkles_display_flex_mobile__onxwju87 sprinkles_alignItems_center_mobile__onxwjuhb sprinkles_justifyContent_center_mobile__onxwjuhv MinimalModal_container__13ik47w0"
          role="none presentation"
        >
          <article
            aria-labelledby="od-4"
            aria-modal="true"
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju87 sprinkles_flexDirection_column_mobile__onxwjuk7"
            role="dialog"
          >
            <main
              class="sprinkles_display_flex_mobile__onxwju87 sprinkles_flexDirection_column_mobile__onxwjuk7 sprinkles_flexGrow_1_mobile__onxwjukf sprinkles_height_full_mobile__onxwjubn MinimalModal_content__13ik47w1"
            >
              <p>
                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis convallis neque a laoreet maximus. Vestibulum hendrerit quam at mi venenatis faucibus at vel nisi. In ut risus et ipsum tincidunt tempor. Suspendisse potenti. Praesent faucibus posuere risus, at congue mauris porttitor ut. Donec sit amet elit vitae purus dictum aliquet quis ut ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum dui sapien, porttitor ac erat vel, malesuada rutrum mauris. Nam arcu tellus, pretium ut aliquet eget, ultrices vel est. Maecenas dapibus volutpat eros a volutpat.
              </p>
            </main>
          </article>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`<MinimalModal /> > should match snapshot without title and body 1`] = `
<body
  class="theme_OD_Base__j49br80"
  style="overflow: hidden;"
>
  <div>
    <div
      class="theme_OD_Base__j49br80"
      data-od-component-provider=""
    />
  </div>
  <div
    class="theme_OD_Base__j49br80"
  >
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <div
        aria-hidden="true"
        class="reset_block__1oah0224 sprinkles_position_fixed_mobile__onxwjua3 sprinkles_backgroundColor_neutral__onxwju3v Modal_backdrop_root__1psykzh3 Modal_transition__1psykzh1"
      />
      <div
        class="reset_block__1oah0224 sprinkles_position_fixed_mobile__onxwjua3 sprinkles_overflow_hidden_mobile__onxwju8v Modal_root__1psykzh0 Modal_transition__1psykzh1"
        role="presentation"
      >
        <div
          aria-hidden="false"
          class="reset_block__1oah0224 sprinkles_height_full_mobile__onxwjubn sprinkles_display_flex_mobile__onxwju87 sprinkles_alignItems_center_mobile__onxwjuhb sprinkles_justifyContent_center_mobile__onxwjuhv MinimalModal_container__13ik47w0"
          role="none presentation"
        >
          <article
            aria-labelledby="od-3"
            aria-modal="true"
            class="reset_block__1oah0224 sprinkles_display_flex_mobile__onxwju87 sprinkles_flexDirection_column_mobile__onxwjuk7"
            role="dialog"
          >
            <main
              class="sprinkles_display_flex_mobile__onxwju87 sprinkles_flexDirection_column_mobile__onxwjuk7 sprinkles_flexGrow_1_mobile__onxwjukf sprinkles_height_full_mobile__onxwjubn MinimalModal_content__13ik47w1"
            />
          </article>
        </div>
      </div>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</body>
`;
